--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -4,6 +4,12 @@ name: GoReleaser
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Git tag to build (e.g., v1.0.0)'
+        required: true
+        type: string
 
 permissions:
   contents: write
@@ -18,6 +24,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Checkout tag (manual run)
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        run: |
+          git checkout "refs/tags/${{ inputs.tag }}"
           
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
@@ -39,6 +50,7 @@ jobs:
         with:
           go-version-file: go.mod
           cache: true
+        id: setup-go
           
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6.3.0
@@ -48,6 +60,7 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GOVERSION: ${{ steps.setup-go.outputs.go-version }}
           
       - name: Attest Build Provenance
         uses: actions/attest-build-provenance@v2.0.0
