chore(ci): dispatch builds tag in separate checkout, use main config via --config to avoid dirty repo

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -27,12 +27,10 @@ jobs:
 
       - name: Checkout tag (manual run)
         if: ${{ github.event_name == 'workflow_dispatch' }}
-        run: |
-          git checkout "refs/tags/${{ inputs.tag }}"
-      - name: Use main branch GoReleaser config (manual run)
-        if: ${{ github.event_name == 'workflow_dispatch' }}
-        run: |
-          git show origin/main:.goreleaser.yaml > .goreleaser.yaml
+        uses: actions/checkout@v4
+        with:
+          ref: refs/tags/${{ inputs.tag }}
+          path: tag
           
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
@@ -56,7 +54,20 @@ jobs:
           cache: true
         id: setup-go
           
+      - name: Run GoReleaser (manual dispatch)
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        uses: goreleaser/goreleaser-action@v6.3.0
+        with:
+          distribution: goreleaser
+          version: '~> v2'
+          args: release --clean --config ../.goreleaser.yaml
+          workdir: tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GOVERSION: ${{ steps.setup-go.outputs.go-version }}
+
       - name: Run GoReleaser
+        if: ${{ github.event_name != 'workflow_dispatch' }}
         uses: goreleaser/goreleaser-action@v6.3.0
         with:
           distribution: goreleaser
@@ -65,8 +76,15 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GOVERSION: ${{ steps.setup-go.outputs.go-version }}
-          
+
+      - name: Attest Build Provenance (manual dispatch)
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        uses: actions/attest-build-provenance@v2.0.0
+        with:
+          subject-path: 'tag/dist/checksums.txt'
+
       - name: Attest Build Provenance
+        if: ${{ github.event_name != 'workflow_dispatch' }}
         uses: actions/attest-build-provenance@v2.0.0
         with:
           subject-path: 'dist/checksums.txt'
